--- a/src/demo/makefile
+++ b/src/demo/makefile
@@ -2,7 +2,7 @@
 include $(PRO_DIR)/prefix.mak
 
 # tbox
-SUB_PROS 				+= console
+SUB_PROS 				+= console core
 
 # suffix
 include $(PRO_DIR)/suffix.mak
