add tessellator interfaces

--- a/src/gbox/makefile
+++ b/src/gbox/makefile
@@ -50,7 +50,7 @@ gbox_C_FILES 			+= \
 
 # utils files
 gbox_C_FILES 			+= \
-						utils/polygon_tessellator \
+						utils/tessellator \
 						utils/mesh \
 						utils/impl/mesh_edge \
 						utils/impl/mesh_face \
@@ -131,7 +131,7 @@ gbox_INC_FILES 			= \
 						utils/utils.h \
 						utils/prefix.h \
 						utils/mesh.h \
-						utils/polygon_tessellator.h \
+						utils/tessellator.h \
 						core/core.h \
 						core/prefix.h \
 						core/prefix/type.h \
