fix some triangulation bug

--- a/src/gbox/makefile
+++ b/src/gbox/makefile
@@ -56,6 +56,7 @@ gbox_C_FILES 			+= \
 						utils/impl/mesh/face_list \
 						utils/impl/mesh/vertex_list \
 						utils/impl/tessellator/mesh \
+						utils/impl/tessellator/convex \
 						utils/impl/tessellator/geometry \
 						utils/impl/tessellator/monotone \
 						utils/impl/tessellator/triangulation
