add is_ccw for geometry

--- a/src/demo/console/makefile
+++ b/src/demo/console/makefile
@@ -14,6 +14,7 @@ demo_C_FILES 									+= \
 												core/vector \
 												core/bitmap \
 												utils/mesh \
+												utils/geometry \
 												other/test
 
 # packages
