add active region interfaces for tessellator

--- a/src/gbox/makefile
+++ b/src/gbox/makefile
@@ -60,6 +60,7 @@ gbox_C_FILES 			+= \
 						utils/impl/tessellator/convex \
 						utils/impl/tessellator/monotone \
 						utils/impl/tessellator/event_queue \
+						utils/impl/tessellator/active_region \
 						utils/impl/tessellator/triangulation
 
 
